Fix: Extra right scrollbar

--- a/resources/css/humhub.mail.css
+++ b/resources/css/humhub.mail.css
@@ -130,7 +130,7 @@
 #mail-conversation-root > .panel {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 10px - var(--hh-fixed-header-height) - var(--hh-fixed-footer-height) - var(--hh-mobile-app-safe-area-inset-bottom, env(safe-area-inset-bottom)) - var(--hh-mail-top-conversation-height));
+  height: calc(100vh - 15px - var(--hh-fixed-header-height) - var(--hh-fixed-footer-height) - var(--hh-mobile-app-safe-area-inset-bottom, env(safe-area-inset-bottom)) - var(--hh-mail-top-conversation-height));
 }
 #mail-conversation-root > .panel > .conversation-entry-container {
   flex: 1;
